# pdfgen

./: .env.example  .gitignore  README.md  app.vue  env.d.ts  index.html  index.js  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  vite.config.ts  webpack.config.js
backend/: .env.example  .gitignore  README.md  alembic.ini  app.db  app.py  auth.py  database.py  models.py  pyproject.toml  requirements.txt  routes.py  schemas.py
backend/alembic/: env.py
backend/alembic/versions/: 013f0140bba0_initial_migration.py  1dd0d97c32cb_add_oauth_accounts_table.py  4104876f2796_modified_templates_model.py  6cbcb6359517_add_api_keys_table.py  b23ce6663897_add_guest_user_support.py  b8397413041d_added_template_model.py  e692a003f01e_initial_migration.py  fa21ee186640_merge_heads.py
backend/api/: dependencies.py
backend/api/v1/: api_keys.py  external.py  templates.py
backend/convertors/: jsx-converter.js  vue-converter.js  wrappers.py
backend/core/: auth.py  config.py  database.py  security.py
backend/features/oauth/: google_oauth_handler.py  oauth_config.py  oauth_routes.py
backend/features/pdf_generation/: __init__.py
backend/features/pdf_generation/services/: __init__.py  playwright_manager.py
backend/oauth/: __init__.py  oauth_routes.py
backend/utils/: playwright_manager.py
config/: passport.js
frontend/: .env  index.html  package-lock.json  package.json  vite.config.js
middleware/: auth.ts
models/: user.js
old_express_app/: index.js  old_tailwindconfig.js
old_nuxt_app/: .gitignore  nuxt.config.ts  package.json
(+113 files in other folders)
