[project]
name = ""
version = "0.0.1"
dependencies = [
    "aiosqlite==0.21.0",
    "alembic==1.12.1",
    "annotated-types==0.7.0",
    "anyio==3.7.1",
    "bcrypt==4.3.0",
    "cffi==1.17.1",
    "click==8.2.1",
    "cryptography==45.0.2",
    "dnspython==2.7.0",
    "ecdsa==0.19.1",
    "email-validator==2.0.0.post2",
    "exceptiongroup==1.3.0",
    "fastapi==0.104.1",
    "fastapi-users==12.1.2",
    "fastapi-users-db-sqlalchemy==7.0.0",
    "greenlet==3.2.2",
    "h11==0.16.0",
    "httptools==0.6.4",
    "idna==3.10",
    "makefun==1.16.0",
    "mako==1.3.10",
    "markupsafe==3.0.2",
    "nanoid==2.0.0",
    "passlib==1.7.4",
    "playwright==1.52.0",
    "pyasn1==0.6.1",
    "pycparser==2.22",
    "pydantic==2.5.0",
    "pydantic-core==2.14.1",
    "pyee==13.0.0",
    "pyexecjs==1.5.1",
    "pyjwt==2.8.0",
    "python-dotenv==1.1.0",
    "python-jose==3.3.0",
    "python-multipart==0.0.6",
    "pyyaml==6.0.2",
    "rsa==4.9.1",
    "setuptools>=80.9.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.23",
    "starlette==0.27.0",
    "typing-extensions==4.13.2",
    "uvicorn==0.24.0",
    "uvloop==0.21.0",
    "watchfiles==1.0.5",
    "websockets==15.0.1",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "deptry>=0.23.0",
]
